base/a2f-grpc-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: a2f-grpc-server
  labels:
    app: a2f-grpc-server
spec:
  type: ClusterIP
  ports:
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: grpc
  selector:
    app: a2f-grpc-server
