base/a2f-grpc-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a2f-grpc-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:247124030538:certificate/52e8e09e-eef6-4487-aeb8-8b12687b3f04
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
spec:
  ingressClassName: alb
  rules:
  - host: a2f-prod.avadot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: a2f-grpc-server
            port:
              number: 50051
